# imu_odom

./: CMakeLists.txt  README.md  package.xml
include/imu_odom/: imu_odom.hpp
launch/: imu_odom.launch
scripts/: cotoff_f.py  draw_log.py  fft.py  imu_butterworth_filter.py  predict.py  save_twist_msg.py  test.py
scripts/vehicle_state_predict/: Readme.md  imuDatesets.py  model.py  train.py  tran_minist.py
src/: imu_odom.cpp
